# gdmcbain.github.io

./: .gitignore  CNAME  README.md  about.html  contact.html  index.html  style.css  technical.html
AerodynamicsI/: aerodynamics.css  index.html
conferences/: index.html
conferences/austms2021/: austms2021.slides.html
conferences/emac2021/: prorso.slides.html
pages/: LICENSE  about.md  contact.md  deploy.sh  pages.cabal
papers/: hygro.html  index.html  mcbain_08_numerical-errata.html
papers/CTAC2004/: errata.html
papers/ext/: ext.html  node1.html  node2.html
papers/jet/: jet.html  notes.html
papers/thesis/: footnode.html  node1.html  node10.html  node100.html  node101.html  node102.html  node103.html  node104.html  node105.html  node106.html  node107.html  node108.html  node109.html  node11.html  node110.html  node111.html  node112.html  node113.html  node114.html  node115.html  node116.html  node117.html  node118.html  node119.html  node12.html  node120.html  node121.html  node122.html  node123.html  node124.html  node125.html  node126.html  node127.html  node128.html  node129.html  node13.html  node130.html  node131.html  node132.html  node133.html  (+110 more)
patents/: index.html
theoryoflift/: errata.html
