name:                pages
version:             0.1.0.0
synopsis:            content for https://gdmcbain.github.io
-- description:
homepage:            https://github.com/gdmcbain/pages#readme
license:             BSD3
license-file:        LICENSE
author:              G. D. McBain
maintainer:          gdmcbain@protonmail.com
copyright:           2018 G. D. McBain
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable pages
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
